--- a/personal-portfolio-site/src/app/comments/comments.component.html
+++ b/personal-portfolio-site/src/app/comments/comments.component.html
@@ -7,24 +7,37 @@
       <mat-card-title>Comment</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <fieldset >
-      <div>
-        <mat-form-field>
-        <input matInput [formControl]="control" required placeholder="Your name" id="n1" #commentName [(ngModel)]="name">
+      <fieldset [formGroup]="comControl">
+
+        <mat-form-field appearance="fill">
+          <input matInput formControlName="control" required placeholder="Your name" id="n1" #commentName [(ngModel)]="name"><br>
+          <mat-error *ngIf="!comControl">
+              only letters, digits
+            </mat-error>
       </mat-form-field>
-    </div>
-    <div>
-      <mat-form-field>
+
+      <mat-form-field appearance="fill">
         <mat-label>Your comment</mat-label>
-        <textarea matInput  #commentComment [(ngModel)]="comment" id="c1"></textarea>
-      </mat-form-field>
-    </div>
+        <textarea matInput formControlName="text"  required  #commentComment [(ngModel)]="comment" id="c1"></textarea><br>
+        <mat-error *ngIf="!comControl">
+            only letters, digits
+          </mat-error>
+    </mat-form-field>
+       
   </fieldset>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button [disabled]="!control.valid" class="add-button" (click)="post()">Comment</button>
+      <button mat-button [disabled]="!comControl.valid" class="add-button" (click)="post(); commentName.value=''; commentComment.value='';" >Comment</button>
     </mat-card-actions>
 
   </mat-card>
+
+
+  <div  *ngFor="let comment of comments">
+ {{comment}}
+  </div>
+
+
+  
 
 
