--- a/personal-portfolio-site/src/app/info/info.component.css
+++ b/personal-portfolio-site/src/app/info/info.component.css
@@ -36,3 +36,20 @@ h1,h2{
     font-size: 2vw;
    
 }
+
+.example-small-box, .example-large-box {
+
+  margin: 16px;
+  padding: 16px;
+  border-radius: 8px;
+}
+
+.example-small-box {
+  height: 50px;
+  width: 250px;
+}
+
+.example-large-box {
+  height: 150px;
+  width: 250px;
+}
